--- a/js/index.html
+++ b/js/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<p>hello world</p>
+<p>Hello world</p>
 
 <script src="инкр%20и%20декр.js"></script>
 </body>
