Lastest commit before ubuntu 18 downloading

--- a/js/index.html
+++ b/js/index.html
@@ -8,7 +8,7 @@
 <body>
 <p>Hello world</p>
 
-<script src="инкр%20и%20декр.js"></script>
+<script src="new%20project.js"></script>
 </body>
 
 </html>
