--- a/index.html
+++ b/index.html
@@ -4,9 +4,69 @@
 	<meta charset="UTF-8">
 	<meta name="random color" content="the color generator">
 	<title>jQuery app</title>
-	<link rel="stylesheet" href="/css/styles.css">
+	<link rel="stylesheet" href="css/styles.css">
+	<script src="script.js"></script>
 </head>
 <body>
-	
+
+	<table>
+
+		<tr>
+			<td>
+
+				<label>	
+
+					<input type="checkbox">
+
+				</label>
+
+			</td>
+
+			<td>Todo item 1</td>
+		</tr>
+
+		<tr>
+			<td>
+				<label>
+
+					<input type="checkbox">
+
+				</label>
+			</td>
+
+			<td>Todo item 2</td>
+		</tr>
+
+		<tr>
+			<td>
+				<label>
+
+					<input type="checkbox">
+
+				</label>
+			</td>
+
+			<td>Todo item 3</td>
+		</tr>
+
+	</table>
+
+
+	<div class="box">
+
+		<form method="post" action="#" id="review">
+
+			<input type="text" name="item_name" placeholder="Add New Item">
+
+			<button class="btn" onclick="randColor()">Add</button>
+
+			
+		</form>
+
+	</div>
+
+		
+
+
 </body>
 </html>
