--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 		<tr>
 			<td>
 
-				<label>	
+				<label class="radio">
 
-					<input type="checkbox">
+				<input type="radio" name="choice"  id="one">
+
+				<span></span>
 
 				</label>
 
@@ -27,11 +29,15 @@
 
 		<tr>
 			<td>
-				<label>
 
-					<input type="checkbox">
+				<label class="radio">
+
+				<input type="radio" name="choice" id="two">
+
+				<span></span>
 
 				</label>
+
 			</td>
 
 			<td>Todo item 2</td>
@@ -39,11 +45,15 @@
 
 		<tr>
 			<td>
-				<label>
 
-					<input type="checkbox">
+				<label class="radio">
+
+				<input type="radio" name="choice" id="three">
+
+				<span></span>
 
 				</label>
+
 			</td>
 
 			<td>Todo item 3</td>
