--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	<meta name="random color" content="the color generator">
 	<title>jQuery app</title>
 	<link rel="stylesheet" href="css/styles.css">
-	<script src="script.js"></script>
+	
 </head>
 <body>
 
 	<table>
 
 		<tr>
-			<td>
+			<td class="td1">
 
 				<label class="radio">
 
@@ -24,11 +24,11 @@
 
 			</td>
 
-			<td>Todo item 1</td>
+			<td class="td1">Todo item 1</td>
 		</tr>
 
 		<tr>
-			<td>
+			<td class="td2">
 
 				<label class="radio">
 
@@ -40,11 +40,11 @@
 
 			</td>
 
-			<td>Todo item 2</td>
+			<td class="td2">Todo item 2</td>
 		</tr>
 
 		<tr>
-			<td>
+			<td class="td3">
 
 				<label class="radio">
 
@@ -56,7 +56,7 @@
 
 			</td>
 
-			<td>Todo item 3</td>
+			<td class="td3">Todo item 3</td>
 		</tr>
 
 	</table>
@@ -66,17 +66,17 @@
 
 		<form method="post" action="#" id="review">
 
-			<input type="text" name="item_name" placeholder="Add New Item">
+			<input type="text" id="in" name="item_name" placeholder="Add New Item">
 
-			<button class="btn" onclick="randColor()">Add</button>
+			<button class="btn" id="add" >Add</button>
 
-			
+
 		</form>
 
 	</div>
 
 		
-
+<script src="js/script.js"></script>
 
 </body>
 </html>
