--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 				<label class="radio">
 
-				<input type="radio" name="choice"  id="one">
+				<input type="radio" name="choice">
 
 				<span></span>
 
@@ -32,7 +32,7 @@
 
 				<label class="radio">
 
-				<input type="radio" name="choice" id="two">
+				<input type="radio" name="choice">
 
 				<span></span>
 
@@ -48,7 +48,7 @@
 
 				<label class="radio">
 
-				<input type="radio" name="choice" id="three">
+				<input type="radio" name="choice">
 
 				<span></span>
 
@@ -64,11 +64,20 @@
 
 	<div class="box">
 
-		<form method="post" action="#" id="review">
+		<form method="post" action="#">
 
-			<input type="text" id="in" name="item_name" placeholder="Add New Item">
+			<input type="text" name="item_name" placeholder="Add New Item">
 
-			<button class="btn" id="add" >Add</button>
+			<button class="btn">Add</button>
+
+			<button class="btnsqr"></button> 
+			<button class="btnsqr"></button>
+			<button class="btnsqr"></button>
+			<button class="btnsqr"></button>
+			<button class="btnsqr"></button>
+			<button class="btnsqr"></button>
+
+			
 
 
 		</form>
