add some styles and jQuery library

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta name="random color" content="the color generator">
 	<title>jQuery app</title>
 	<link rel="stylesheet" href="css/styles.css">
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-
+<div class="my_table">
 	<table>
 
 		<tr>
@@ -68,23 +68,22 @@
 
 			<input type="text" name="item_name" placeholder="Add New Item">
 
-			<button class="btn">Add</button>
+			<div class="buttons_inside">
+				<button class="btnsqr"></button>
+				<button class="btnsqr"></button>
+				<button class="btnsqr"></button>
+				<button class="btnsqr"></button>
+				<button class="btnsqr"></button>
+				<button class="btnsqr"></button>
 
-			<button class="btnsqr"></button> 
-			<button class="btnsqr"></button>
-			<button class="btnsqr"></button>
-			<button class="btnsqr"></button>
-			<button class="btnsqr"></button>
-			<button class="btnsqr"></button>
-
-			
-
+				<button class="btn" type="submit">Add</button>
+			</div>
 
 		</form>
 
 	</div>
+</div>
 
-		
 <script src="js/script.js"></script>
 
 </body>
